--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install Golang
         run: |
           wget https://dl.google.com/go/go1.16.8.linux-amd64.tar.gz
-          tar -zxvf go1.16.8.linux-amd64.tar.gz
+          tar -zxf go1.16.8.linux-amd64.tar.gz
+          ls
           mv go /usr/local/
           go version
+          
