--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,6 +23,7 @@ jobs:
           export GOPATH=$PWD/gopath #GOPATH
           export PATH=$GOPATH/bin:$GOROOT/bin:
           go version
+          apt install git
           cd develop
           git clone https://github.com/ufuckee/jd_cookie
           cd ..
