--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,9 +23,4 @@ jobs:
           export GOPATH=$PWD/gopath #GOPATH
           export PATH=$GOPATH/bin:$GOROOT/bin:
           go version
-          apt install git
-          cd develop
-          git clone https://github.com/ufuckee/jd_cookie
-          cd ..
-          ls
-          ls develop
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -O sillyGirl-linux-amd64
