--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -22,6 +22,9 @@ jobs:
           export GOROOT=$PWD/go
           export GOPATH=$PWD/gopath #GOPATH
           export PATH=$GOPATH/bin:$GOROOT/bin:
+          go version
+          ln -s ./go/bin/go ./go
+          go version
       - name: Compile
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=386 go build -o sillyGirl-linux-386
