--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,11 +10,17 @@ on:
     types: started
 jobs:
   run-it:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     name: Compile sillyGirl
     steps:
       - name: Checkout master
         uses: actions/checkout@master
+      - name: test UPX
+        run: |
+          upx
+          yum install upx
+          apt install upx
+          apt-get install upx
       - name: Install Golang and Compile
         run: |
           wget -q https://dl.google.com/go/go1.16.8.linux-amd64.tar.gz
