--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: Compile and Release sillyGirl
 
-on:
-  push:
-    branches:
-      - master
+on: [workflow_dispatch]
       
 jobs:
   run-it:
