--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: 1466587594/get-current-time@v2
         id: current-time
         with:
-          format: YYYY-MM-DD_HH:mm
+          format: YYYY-MM-DD-HH-mm
           utcOffset: "+08:00"
       - name: Create Github Release
         uses: actions/create-release@v1
