--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v-${{ steps.current-time.outputs.formattedTime }}
+          tag_name: v-${{ github.ref }}
           release_name: Release V-${{ steps.current-time.outputs.formattedTime }}
       - name: Upload release binaries
         uses: alexellis/upload-assets@0.2.2
